samples/_failures_safe/1761530249_8fc772_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_790428c7.c: In function ‘main’:
./samples/SAFE/__tmp_790428c7.c:157:30: error: expected ‘;’ at end of input
  157 |             a.cols = read_int
      |                              ^
      |                              ;
./samples/SAFE/__tmp_790428c7.c:157:13: error: expected declaration or statement at end of input
  157 |             a.cols = read_int
      |             ^
./samples/SAFE/__tmp_790428c7.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_790428c7.c:157:13: error: expected declaration or statement at end of input
